# screen-capture

./: Cargo.toml  LICENSE  README.md
crates/capture-cli/: Cargo.toml
crates/capture-cli/src/: main.rs
crates/capture-core/: Cargo.toml
crates/capture-core/src/: backend.rs  error.rs  lib.rs  model.rs  output.rs
crates/capture-editor/: Cargo.toml
crates/capture-editor/src/: app.rs  lib.rs
crates/capture-platform-linux/: Cargo.toml
crates/capture-platform-linux/src/: clipboard.rs  detect.rs  diagnostics.rs  lib.rs  portal.rs  x11.rs
crates/capture-tray/: Cargo.toml
crates/capture-tray/src/: hotkey.rs  launch.rs  main.rs
crates/capture-utils/: Cargo.toml
crates/capture-utils/src/: lib.rs
