[package]
name = "capture-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
capture-core = { path = "../capture-core" }
capture-platform-linux = { path = "../capture-platform-linux" }
capture-utils = { path = "../capture-utils" }
clap.workspace = true
tracing.workspace = true

