[package]
name = "capture-platform-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
ashpd = { workspace = true, features = ["screenshot"] }
capture-core = { path = "../capture-core" }
image.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
x11rb.workspace = true
zbus.workspace = true
