[package]
name = "capture-tray"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
capture-core = { path = "../capture-core" }
capture-editor = { path = "../capture-editor" }
capture-platform-linux = { path = "../capture-platform-linux" }
capture-utils = { path = "../capture-utils" }
clap.workspace = true
ksni.workspace = true
tracing.workspace = true
x11rb.workspace = true
