[package]
name = "capture-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
capture-core = { path = "../capture-core" }
time.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

